k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: portfolio
  type: NodePort
